workflows/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tothemoon-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # to use regex on my paths
    nginx.ingress.kubernetes.io/use-regex: "true"
    # also something about the path, rewriting the target, modifying the url
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   rewrite ^(/)
spec:
  rules:
    - http:
        paths:
          - path: "/?(.*)"
            pathType: Prefix
            backend:
              service: 
                name: frontend-service
                port: 
                  number: 80
          - path: "/user/?(.*)"
            pathType: Prefix
            backend:
              service: 
                name: tothemoon-user
                port: 
                  number: 80
          - path: "/post/?(.*)"
            pathType: Prefix
            backend:
              service: 
                name: tothemoon-post
                port: 
                  number: 80
